Complete header layout and styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To Do List</title>
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
-  
+  <div class="flex-container">
+    <header class="header">
+      <img class="todo-banner" src="pics/To Do List Docs Banner.png" alt="To do banner">
+    </header>
+    <main>
+    </main>
+  </div>
 </body>
 </html>
