--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <section id="main-container">
         <div class="task-input-box">
-          <input class="todo-name" type="text" placeholder="Add new todo">
+          <input class="todo-name" type="text" placeholder="Add new todo...">
         
           <input type="date" id="todo-date" class="hidden-date-input">
 
@@ -30,7 +30,22 @@
           <button class="add-button">ADD</button>
         </div>
 
-        <div></div>
+        <div class="navigation">
+          <ul class="nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active">All</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Completed</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Removed</a>
+            </li>
+          </ul>
+        </div>
         <div></div>
       </section>
     </main>
