Add progress bar and task completion indicator

--- a/index.html
+++ b/index.html
@@ -102,7 +102,17 @@
             </li>
           </ul>
 
-          <div class="stats-container">2</div>
+          <div class="stats-container">
+            <div class="details">
+              <h2 class="motivation-text">Don’t overthink, just begin!</h2>
+              <div id="progress-bar">
+                <div id="progress"></div>
+              </div>              
+            </div>
+            <div class="stats-numbers">
+              <p class="numbers">1 / 2</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
