Implement delete todo functionality

--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>  
 
-  <script src="script/todo-list.js"></script>
+  <script type="module" src="script/todo-list.js"></script>
 </body>
 </html>
