--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h2>Edit Todo</h2>
-          <span class="close-modal">&#10006;</span>
+          <span class="close-modal js-close-modal">&#10006;</span>
         </div>
         <div class="modal-body">
           <div class="modal-inputs">
