Edited the attachEditButtonListeners()  and added the  update todos functionality

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <input type="date" class="edit-date-input js-edit-date-input">
           </div>
           <div class="modal-buttons">
-            <button class="save-edit-button js-save-edit-button">Update</button>
+            <button class="update-button js-update-button">Update</button>
             <button class="cancel-edit-button js-cancel-edit-button">Cancel</button>
           </div>
         </div>
@@ -94,6 +94,7 @@
 
   </div>
  
+  <script type="module" src="script/data/todos.js"></script>
   <script type="module" src="script/todo-list.js"></script>
   <script type="module" src="script/components/editModal.js"></script>
 </body>
