--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
         <div class="navigation">
           <ul class="nav-tabs">
             <li class="nav-item">
-              <a class="nav-link active">All</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Active</a>
+              <a class="nav-link active">Active</a>
             </li>
             <li class="nav-item">
               <a class="nav-link">Completed</a>
