--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
 
         <div class="navigation">
           <ul class="nav-tabs">
-            <li class="nav-item">
-              <a class="nav-link active">Active</a>
+            <li class="nav-item ">
+              <a class="nav-link active" data-view="all">All</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">Completed</a>
+              <a class="nav-link" data-view="active">Active</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">Removed</a>
+              <a class="nav-link" data-view="completed">Completed</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-view="Removed">Removed</a>
             </li>
           </ul>
         </div>
