Implement 'All' view rendering and navHandler

--- a/index.html
+++ b/index.html
@@ -48,21 +48,7 @@
           </ul>
         </div>
 
-        <div class="todo-container">
-          <ul class="todo-list js-todo-list">
-          </ul>
-
-          <div class="stats-container">
-            <div class="details">
-              <h2 class="motivation-text">Don’t overthink, just begin!</h2>
-              <div id="progress-bar">
-                <div id="progress"></div>
-              </div>              
-            </div>
-            <div class="stats-numbers">
-              <p class="numbers">1 / 2</p>
-            </div>
-          </div>
+        <div class="todo-container js-todo-container">
         </div>
       </section>
     </main>
@@ -94,8 +80,8 @@
 
   </div>
  
-  <script type="module" src="script/data/todos.js"></script>
   <script type="module" src="script/todo-list.js"></script>
   <script type="module" src="script/components/editModal.js"></script>
+
 </body>
 </html>
