--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/app.css">
   <link rel="stylesheet" href="styles/modal.css">
+  <link rel="stylesheet" href="styles/activeView.css">
+  <link rel="stylesheet" href="styles/completedView.css">
+  
 </head>
 <body>
   <div class="flex-container">
