--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/modal.css">
   <link rel="stylesheet" href="styles/activeView.css">
   <link rel="stylesheet" href="styles/completedView.css">
+  <link rel="stylesheet" href="styles/removedView.css">
   
 </head>
 <body>
@@ -46,7 +47,7 @@
               <a class="nav-link" data-view="completed">Completed</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-view="Removed">Removed</a>
+              <a class="nav-link" data-view="removed">Removed</a>
             </li>
           </ul>
         </div>
