Add confetti animation for task completion celebration

--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
  
   <script type="module" src="script/todo-list.js"></script>
   <script type="module" src="script/components/editModal.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
 </body>
 </html>
